@@ -51,6 +51,5 @@ GtkWidget *dh_search_new               (GList       *keywords);
 void       dh_search_set_search_string (DhSearch    *search,
                                         const gchar *str,
                                         const gchar *book_id);
-void       dh_search_grab_focus        (DhSearch    *search);
 
 #endif /* __DH_SEARCH_H__ */
