@@ -1,5 +1,11 @@
 2008-10-10  Richard Hult  <richard@imendio.com>
 
+	* src/dh-search.[ch]: Remove dh_search_grab_focus().
+	* src/dh-window.c: Replace the use of the above with
+	gtk_widget_grab_focus().
+
+2008-10-10  Richard Hult  <richard@imendio.com>
+
 	* data/devhelp.desktop.in.in: Remove Encoding field since
 	desktop-file-validate complains about it, thanks to Enrico Tröger.
 	Also remove the MimeType field as haven't supported opening
